--- a/config_en.json
+++ b/config_en.json
@@ -836,7 +836,7 @@
 "showOriginalColor":false,
 "defaultTab":false,
 "icon":"assets/icons/tabs/icon-home.png",
-"key":"dtfhidbowB"
+"key":"PwCQuJNmrx"
 },
 {
 "layout":"category",
@@ -849,7 +849,7 @@
 "showSearch":false,
 "icon":"assets/icons/tabs/icon-category.png",
 "categoryLayout":"sideMenuWithGroup",
-"key":"fnVRDlsynb"
+"key":"EkmmvkWpBe"
 },
 {
 "layout":"videos",
@@ -859,24 +859,23 @@
 "showOriginalColor":false,
 "defaultTab":false,
 "icon":"videocam_circle",
-"key":"OuVQzLReEK"
+"key":"ZCQFEJyMrX"
 },
 {
 "layout":"cart",
 "pos":400,
 "icon":"assets/icons/tabs/icon-cart2.png",
-"key":"SkiVpPMKkX"
+"key":"hZbHTYkkNu"
 },
 {
-"key":"djpodjfvbt",
+"key":"icGTtOFKAu",
 "layout":"profile",
 "icon":"assets/icons/tabs/icon-user.png",
 "pos":500,
 "defaultTab":false,
 "fullscreen":false,
 "showOriginalColor":false,
-"settings":["banner-qTwIFMRZYD",
-"wallet",
+"settings":["wallet",
 "point",
 "order",
 "biometrics",
