--- a/config_en.json
+++ b/config_en.json
@@ -839,17 +839,14 @@
 "key":"PwCQuJNmrx"
 },
 {
-"layout":"category",
-"parallaxImageRatio":1.2,
-"fullscreen":false,
-"pos":200,
-"showOriginalColor":false,
-"parallax":false,
-"defaultTab":false,
-"showSearch":false,
+"key":"HIhsTlFnIk",
+"layout":"profile",
 "icon":"assets/icons/tabs/icon-category.png",
-"categoryLayout":"sideMenuWithGroup",
-"key":"EkmmvkWpBe"
+"pos":200,
+"defaultTab":false,
+"fullscreen":false,
+"showOriginalColor":false,
+"showBackground":true
 },
 {
 "layout":"videos",
