--- a/config_en.json
+++ b/config_en.json
@@ -709,7 +709,7 @@
 "height":0.25
 },
 "enable":true,
-"alwaysShowUponOpen":true
+"alwaysShowUponOpen":false
 },
 "flexible":{
 "canClose":false,
@@ -836,17 +836,20 @@
 "showOriginalColor":false,
 "defaultTab":false,
 "icon":"assets/icons/tabs/icon-home.png",
-"key":"PwCQuJNmrx"
+"key":"iJpXRpmEME"
 },
 {
-"key":"HIhsTlFnIk",
-"layout":"profile",
-"icon":"assets/icons/tabs/icon-category.png",
-"pos":200,
-"defaultTab":false,
+"layout":"category",
+"parallaxImageRatio":1.2,
 "fullscreen":false,
+"pos":200,
 "showOriginalColor":false,
-"showBackground":true
+"parallax":false,
+"defaultTab":false,
+"showSearch":false,
+"icon":"assets/icons/tabs/icon-category.png",
+"categoryLayout":"sideMenuWithGroup",
+"key":"VGgjkOFxTv"
 },
 {
 "layout":"videos",
@@ -856,16 +859,16 @@
 "showOriginalColor":false,
 "defaultTab":false,
 "icon":"videocam_circle",
-"key":"ZCQFEJyMrX"
+"key":"eCIBkgxuNn"
 },
 {
 "layout":"cart",
 "pos":400,
 "icon":"assets/icons/tabs/icon-cart2.png",
-"key":"hZbHTYkkNu"
+"key":"BHgBtzRROk"
 },
 {
-"key":"icGTtOFKAu",
+"key":"cNhEcneNGS",
 "layout":"profile",
 "icon":"assets/icons/tabs/icon-user.png",
 "pos":500,
