--- a/config_en.json
+++ b/config_en.json
@@ -1380,13 +1380,13 @@
 },
 "TabBar":[
 {
+"key":"BQJnjQAhSh",
 "layout":"home",
-"fullscreen":false,
-"pos":100,
-"showOriginalColor":false,
-"defaultTab":false,
 "icon":"assets/icons/tabs/icon-home.png",
-"key":"ImEMGaihID"
+"pos":100,
+"defaultTab":false,
+"fullscreen":false,
+"showOriginalColor":false
 },
 {
 "layout":"category",
@@ -1408,17 +1408,23 @@
 "730",
 "726"],
 "categoryLayout":"subCategories",
-"key":"PnxvzYFSrG"
+"key":"zcdHHFHnjs"
 },
 {
-"layout":"wishlist",
+"key":"LeWRRHzDgC",
+"layout":"page",
+"icon":"money_dollar_circle_fill",
 "fontFamily":"CupertinoIcons",
-"fullscreen":false,
 "pos":300,
-"showOriginalColor":false,
 "defaultTab":false,
-"icon":"bookmark_solid",
-"key":"QpvfTrGXkw"
+"fullscreen":false,
+"showOriginalColor":false,
+"url":"https://xpertmania.com/become-an-affiliate/",
+"title":"Became Affiliates ",
+"auth":false,
+"enableBackward":true,
+"enableForward":true,
+"script":""
 },
 {
 "layout":"cart",
@@ -1427,7 +1433,7 @@
 "showOriginalColor":false,
 "defaultTab":false,
 "icon":"assets/icons/tabs/icon-cart2.png",
-"key":"KjOoeJxlEX"
+"key":"cVlepdkYSR"
 },
 {
 "layout":"profile",
@@ -1482,7 +1488,7 @@
 "title":"",
 "iconFontFamily":"CupertinoIcons"}
 },
-"key":"UMIaTZKjIF"
+"key":"nEuapdahrO"
 }
 ],
 "Drawer":{
@@ -1835,4 +1841,4 @@
 "cartIconRadius":12,
 "shuffle":false,
 "category":"722",
-"key":"CkMdjyNzon"}}
+"key":"igRxmdfjHi"}}
