--- a/config_en.json
+++ b/config_en.json
@@ -1,11 +1,32 @@
 {
 "HorizonLayout":[
 {
-"layout":"spacer",
-"backgroundColor":null,
-"useLightColor":false,
+"parallax":false,
+"enableParallax":false,
+"enableBackground":false,
+"isHorizontal":false,
+"marginLeft":0,
+"layout":"bannerImage",
+"fit":"cover",
+"marginRight":0,
+"parallaxImageRatio":1.2,
+"design":"static",
+"marginBottom":0,
+"items":[
+{
+"image":"https://i.imgur.com/KLrpf26.gif",
+"padding":0,
+"bannerWithProduct":false,
+"showSubcategory":false,
+"video":"",
+"radius":0,
+"defaultShowProduct":false,
+"products":[]
+}
+],
+"marginTop":0,
 "preview_data":false,
-"height":9.045226130653266
+"height":0.1
 },
 {
 "layout":"bannerImage",
@@ -266,14 +287,14 @@
 "height":0.05
 },
 {
-"type":"iframe",
-"data":"",
+"type":"url",
+"data":"https://www.youtube.com/watch?v=gjo3W4HmEk0",
 "height":200.0,
 "spacing":{
 "margin":null,
 "padding":null
 },
-"script":"<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/gjo3W4HmEk0?si=9ad8yYOSMVvqPxWE&amp;controls=0\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" referrerpolicy=\"strict-origin-when-cross-origin\" allowfullscreen></iframe>",
+"script":"",
 "navigator":null,
 "layout":"webEmbed",
 "preview_data":false
@@ -471,32 +492,11 @@
 "height":0.1
 },
 {
-"parallax":false,
-"enableParallax":false,
-"enableBackground":false,
-"isHorizontal":false,
-"marginLeft":0,
-"layout":"bannerImage",
-"fit":"cover",
-"marginRight":0,
-"parallaxImageRatio":1.2,
-"design":"static",
-"marginBottom":0,
-"items":[
-{
-"image":"https://i.imgur.com/KLrpf26.gif",
-"padding":0,
-"bannerWithProduct":false,
-"showSubcategory":false,
-"video":"",
-"radius":0,
-"defaultShowProduct":false,
-"products":[]
-}
-],
-"marginTop":0,
+"layout":"spacer",
+"backgroundColor":null,
+"useLightColor":false,
 "preview_data":false,
-"height":0.1
+"height":9.045226130653266
 },
 {
 "boxShadow":{
@@ -774,7 +774,7 @@
 "backgroundColor":null,
 "useLightColor":false,
 "preview_data":false,
-"height":10
+"height":6.129186602870818
 },
 {
 "boxShadow":null,
@@ -1253,7 +1253,7 @@
 "backgroundColor":null,
 "useLightColor":false,
 "preview_data":false,
-"height":6.129186602870818
+"height":10
 }
 ],
 "Setting":{
