--- a/config_en.json
+++ b/config_en.json
@@ -1,11 +1,32 @@
 {
 "HorizonLayout":[
 {
-"layout":"spacer",
-"backgroundColor":null,
-"useLightColor":false,
+"parallax":false,
+"enableParallax":false,
+"enableBackground":false,
+"isHorizontal":false,
+"marginLeft":0,
+"layout":"bannerImage",
+"fit":"cover",
+"marginRight":0,
+"parallaxImageRatio":1.2,
+"design":"static",
+"marginBottom":0,
+"items":[
+{
+"image":"https://i.imgur.com/KLrpf26.gif",
+"padding":0,
+"bannerWithProduct":false,
+"showSubcategory":false,
+"video":"",
+"radius":0,
+"defaultShowProduct":false,
+"products":[]
+}
+],
+"marginTop":0,
 "preview_data":false,
-"height":9.045226130653266
+"height":0.1
 },
 {
 "layout":"bannerImage",
@@ -458,32 +479,11 @@
 "height":0.1
 },
 {
-"parallax":false,
-"enableParallax":false,
-"enableBackground":false,
-"isHorizontal":false,
-"marginLeft":0,
-"layout":"bannerImage",
-"fit":"cover",
-"marginRight":0,
-"parallaxImageRatio":1.2,
-"design":"static",
-"marginBottom":0,
-"items":[
-{
-"image":"https://i.imgur.com/KLrpf26.gif",
-"padding":0,
-"bannerWithProduct":false,
-"showSubcategory":false,
-"video":"",
-"radius":0,
-"defaultShowProduct":false,
-"products":[]
-}
-],
-"marginTop":0,
+"layout":"spacer",
+"backgroundColor":null,
+"useLightColor":false,
 "preview_data":false,
-"height":0.1
+"height":9.045226130653266
 },
 {
 "boxShadow":{
@@ -761,7 +761,7 @@
 "backgroundColor":null,
 "useLightColor":false,
 "preview_data":false,
-"height":10
+"height":6.129186602870818
 },
 {
 "boxShadow":null,
@@ -1240,7 +1240,7 @@
 "backgroundColor":null,
 "useLightColor":false,
 "preview_data":false,
-"height":6.129186602870818
+"height":10
 }
 ],
 "Setting":{
@@ -1326,7 +1326,7 @@
 }
 ],
 "marginBottom":0.0,
-"height":0.25,
+"height":0.35,
 "marginRight":0.0,
 "marginTop":0.0,
 "enableParallax":false,
@@ -1335,7 +1335,7 @@
 "enableBackground":false,
 "parallax":false,
 "boxShadow":null,
-"key":"DexwFnvHTg"
+"key":"HXlGheGdED"
 },
 "enable":true,
 "alwaysShowUponOpen":true
