--- a/config_en.json
+++ b/config_en.json
@@ -1,34 +1,6 @@
 {
 "HorizonLayout":[
 {
-"parallax":false,
-"enableParallax":false,
-"enableBackground":false,
-"isHorizontal":false,
-"marginLeft":0,
-"layout":"bannerImage",
-"fit":"cover",
-"marginRight":0,
-"parallaxImageRatio":1.2,
-"design":"static",
-"marginBottom":0,
-"items":[
-{
-"image":"https://i.imgur.com/KLrpf26.gif",
-"padding":0,
-"bannerWithProduct":false,
-"showSubcategory":false,
-"video":"",
-"radius":0,
-"defaultShowProduct":false,
-"products":[]
-}
-],
-"marginTop":0,
-"preview_data":false,
-"height":0.1
-},
-{
 "layout":"bannerImage",
 "design":"default",
 "fit":"fitWidth",
@@ -479,6 +451,34 @@
 "height":0.1
 },
 {
+"parallax":false,
+"enableParallax":false,
+"enableBackground":false,
+"isHorizontal":false,
+"marginLeft":0,
+"layout":"bannerImage",
+"fit":"cover",
+"marginRight":0,
+"parallaxImageRatio":1.2,
+"design":"static",
+"marginBottom":0,
+"items":[
+{
+"image":"https://i.imgur.com/KLrpf26.gif",
+"padding":0,
+"bannerWithProduct":false,
+"showSubcategory":false,
+"video":"",
+"radius":0,
+"defaultShowProduct":false,
+"products":[]
+}
+],
+"marginTop":0,
+"preview_data":false,
+"height":0.1
+},
+{
 "layout":"spacer",
 "backgroundColor":null,
 "useLightColor":false,
@@ -639,11 +639,11 @@
 },
 {
 "boxShadow":{
-"spreadRadius":10,
-"colorOpacity":0.1,
 "blurRadius":12.01010101010101,
-"x":4,
-"y":6
+"colorOpacity":0.1,
+"spreadRadius":10.0,
+"x":4.0,
+"y":6.0
 },
 "featured":false,
 "hideEmptyProductLayout":false,
@@ -658,17 +658,17 @@
 "image":"",
 "showCategory":false,
 "showCartIconColor":true,
-"hPadding":8,
+"hPadding":8.0,
 "hidePrice":false,
 "enableBottomAddToCart":false,
 "enableRating":true,
-"imageRatio":0.6,
+"imageRatio":0.7,
 "useCircularRadius":true,
-"borderRadius":16,
-"cardDesign":"simpleCard",
+"borderRadius":8.0,
+"cardDesign":"flatSimple",
 "isSnapping":false,
 "name":"",
-"cartIconRadius":20,
+"cartIconRadius":20.0,
 "enableAutoSliding":false,
 "showCartIcon":false,
 "imageBoxfit":"cover",
@@ -676,10 +676,10 @@
 "titleLine":1,
 "parallax":false,
 "columns":0,
-"vPadding":0,
-"hMargin":6,
+"vPadding":0.0,
+"hMargin":6.0,
 "parallaxImageRatio":1.2,
-"vMargin":0,
+"vMargin":0.0,
 "onSale":false,
 "productType":false,
 "productListItemHeight":151.79999999999998,
@@ -687,7 +687,7 @@
 "rows":2,
 "layout":"threeColumn",
 "hideTitle":false,
-"backgroundRadius":10,
+"backgroundRadius":10.0,
 "showCartButton":false,
 "category":"725",
 "hideEmptyProductListRating":false,
