--- a/config_en.json
+++ b/config_en.json
@@ -392,17 +392,40 @@
 "preview_data":false
 },
 {
+"isSafeArea":false,
+"showSearch":false,
+"usePrimaryColor":true,
+"enableBackground":false,
+"borderInput":false,
+"title":"Main Feacher's Of Xpert Mania",
+"type":"static",
+"alignment":"centerLeft",
+"fontWeight":500.0,
+"fontSize":16.0,
+"textOpacity":1.0,
+"marginLeft":7.000000000000001,
+"marginRight":0.0,
+"marginBottom":0.0,
+"marginTop":0.0,
+"paddingLeft":5.0,
+"paddingRight":15.0,
+"paddingTop":0.0,
+"paddingBottom":0.0,
+"height":21.0,
+"rotate":[],
+"minWidth":0.0,
+"backgroundGradientColor":[],
+"font":"Aoboshi One",
+"layout":"header_text",
+"preview_data":false
+},
+{
 "type":"iframe",
-"data":"<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/JoFZr8gmV4Y?si=pEzck8nxemzkwkHL\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" referrerpolicy=\"strict-origin-when-cross-origin\" allowfullscreen></iframe>",
-"height":200.0,
+"data":"<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/gjo3W4HmEk0?si&autoplay=1=9ad8yYOSMVvqPxWE&amp;controls=0\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" referrerpolicy=\"strict-origin-when-cross-origin\" allowfullscreen></iframe>",
+"height":205.0,
 "spacing":{
 "margin":null,
 "padding":null
-},
-"navigator":{
-"tag":null,
-"showSubcategory":false,
-"category":"722"
 },
 "layout":"webEmbed",
 "preview_data":false
@@ -745,32 +768,11 @@
 "height":0.05
 },
 {
-"parallax":false,
-"enableParallax":false,
-"enableBackground":false,
-"isHorizontal":false,
-"marginLeft":0,
-"layout":"bannerImage",
-"fit":"contain",
-"marginRight":0,
-"parallaxImageRatio":1.2,
-"design":"static",
-"marginBottom":0,
-"items":[
-{
-"image":"https://i.imgur.com/ueH52IF.png",
-"padding":0,
-"bannerWithProduct":false,
-"showSubcategory":false,
-"video":"",
-"radius":0,
-"defaultShowProduct":false,
-"products":[]
-}
-],
-"marginTop":0,
+"layout":"spacer",
+"backgroundColor":null,
+"useLightColor":false,
 "preview_data":false,
-"height":0.15
+"height":10
 },
 {
 "layout":"spacer",
@@ -1223,11 +1225,32 @@
 "preview_data":false
 },
 {
-"layout":"spacer",
-"backgroundColor":null,
-"useLightColor":false,
+"parallax":false,
+"enableParallax":false,
+"enableBackground":false,
+"isHorizontal":false,
+"marginLeft":0,
+"layout":"bannerImage",
+"fit":"contain",
+"marginRight":0,
+"parallaxImageRatio":1.2,
+"design":"static",
+"marginBottom":0,
+"items":[
+{
+"image":"https://i.imgur.com/ueH52IF.png",
+"padding":0,
+"bannerWithProduct":false,
+"showSubcategory":false,
+"video":"",
+"radius":0,
+"defaultShowProduct":false,
+"products":[]
+}
+],
+"marginTop":0,
 "preview_data":false,
-"height":10
+"height":0.15
 }
 ],
 "Setting":{
