--- a/config_en.json
+++ b/config_en.json
@@ -1666,7 +1666,17 @@
 },
 "enable":false}
 },
-"StickyHeader":false
+"StickyHeader":false,
+"AgeRestriction":{
+"enable":false,
+"imageUrl":"",
+"backgroundImageUrl":"",
+"title":"",
+"deniedMessage":"",
+"hintMessage":"",
+"minimumAge":15,
+"useLogo":true,
+"alwaysShowUponOpen":true}
 },
 "TabBar":[
 {
@@ -1676,7 +1686,7 @@
 "showOriginalColor":false,
 "defaultTab":false,
 "icon":"assets/icons/tabs/icon-home.png",
-"key":"PTFfbgIhHC"
+"key":"CuKRcOOuGv"
 },
 {
 "layout":"category",
@@ -1689,23 +1699,17 @@
 "showSearch":true,
 "icon":"assets/icons/tabs/icon-category.png",
 "categoryLayout":"multi-level",
-"key":"FXDSLMJiME"
+"key":"bmQsPeVbAJ"
 },
 {
-"showOriginalColor":false,
-"auth":false,
-"defaultTab":false,
-"icon":"money_dollar_circle_fill",
-"title":"Became Affiliates ",
-"url":"https://xpertmania.com/become-an-affiliate/",
-"script":"",
-"layout":"page",
+"key":"mFIXtqZDte",
+"layout":"wishlist",
+"icon":"heart",
 "fontFamily":"CupertinoIcons",
-"fullscreen":false,
 "pos":300,
-"enableBackward":true,
-"enableForward":true,
-"key":"KxXaOeFBLv"
+"defaultTab":false,
+"fullscreen":false,
+"showOriginalColor":false
 },
 {
 "layout":"cart",
@@ -1714,7 +1718,7 @@
 "showOriginalColor":false,
 "defaultTab":false,
 "icon":"assets/icons/tabs/icon-cart2.png",
-"key":"WDLHWgfgyg"
+"key":"iiSkhxmsWH"
 },
 {
 "layout":"profile",
@@ -1770,7 +1774,7 @@
 "title":"",
 "iconFontFamily":"CupertinoIcons"}
 },
-"key":"qDacIvvwGu"
+"key":"OSQeTHrkMr"
 }
 ],
 "Drawer":{
@@ -2152,4 +2156,4 @@
 "cartIconRadius":12,
 "shuffle":false,
 "category":"722",
-"key":"iperLxZbmt"}}
+"key":"BgFYjVXwWU"}}
