--- a/config_en.json
+++ b/config_en.json
@@ -1,6 +1,13 @@
 {
 "HorizonLayout":[
 {
+"layout":"spacer",
+"backgroundColor":null,
+"useLightColor":false,
+"preview_data":false,
+"height":9.045226130653266
+},
+{
 "parallax":false,
 "doubleTapToFullScreen":false,
 "enableBackground":false,
@@ -63,14 +70,7 @@
 }
 ],
 "marginTop":0,
-"preview_data":true
-},
-{
-"layout":"spacer",
-"backgroundColor":null,
-"useLightColor":false,
-"preview_data":true,
-"height":9.045226130653266
+"preview_data":false
 },
 {
 "parallax":false,
@@ -96,7 +96,7 @@
 }
 ],
 "marginTop":0,
-"preview_data":true,
+"preview_data":false,
 "height":0.05
 },
 {
@@ -222,7 +222,7 @@
 }
 ],
 "marginTop":10,
-"preview_data":true,
+"preview_data":false,
 "paddingY":0
 },
 {
@@ -270,14 +270,14 @@
 }
 ],
 "marginTop":10,
-"preview_data":true,
+"preview_data":false,
 "height":0.05
 },
 {
 "layout":"spacer",
 "backgroundColor":null,
 "useLightColor":false,
-"preview_data":true,
+"preview_data":false,
 "height":9.045226130653266
 },
 {
@@ -305,7 +305,7 @@
 }
 ],
 "marginTop":0,
-"preview_data":true,
+"preview_data":false,
 "height":0.2
 },
 {
@@ -334,7 +334,7 @@
 }
 ],
 "marginTop":0,
-"preview_data":true,
+"preview_data":false,
 "height":0.05
 },
 {
@@ -415,7 +415,35 @@
 "hideEmptyProductListRating":false,
 "backgroundWidthMode":true,
 "spaceWidth":160.64703042008708,
-"preview_data":true
+"preview_data":false
+},
+{
+"parallax":false,
+"enableParallax":false,
+"enableBackground":false,
+"isHorizontal":false,
+"marginLeft":0,
+"layout":"bannerImage",
+"fit":"cover",
+"marginRight":0,
+"parallaxImageRatio":1.2,
+"design":"static",
+"marginBottom":0,
+"items":[
+{
+"image":"https://i.imgur.com/KLrpf26.gif",
+"padding":0,
+"bannerWithProduct":false,
+"showSubcategory":false,
+"video":"",
+"radius":0,
+"defaultShowProduct":false,
+"products":[]
+}
+],
+"marginTop":0,
+"preview_data":false,
+"height":0.1
 },
 {
 "rotate":["100% OFF",
@@ -445,7 +473,7 @@
 "alignment":"centerLeft",
 "paddingLeft":5,
 "marginTop":15,
-"preview_data":true,
+"preview_data":false,
 "font":"ADLaM Display"
 },
 {
@@ -453,28 +481,27 @@
 "enableParallax":false,
 "enableBackground":false,
 "isHorizontal":false,
-"marginLeft":0,
+"marginLeft":10,
 "layout":"bannerImage",
-"fit":"cover",
-"marginRight":0,
+"fit":"fitWidth",
+"marginRight":10,
 "parallaxImageRatio":1.2,
 "design":"static",
 "marginBottom":0,
 "items":[
 {
-"image":"https://i.imgur.com/KLrpf26.gif",
-"padding":0,
+"padding":5,
+"image":"https://i.imgur.com/flX2F8O.png",
 "bannerWithProduct":false,
 "showSubcategory":false,
 "video":"",
-"radius":0,
 "defaultShowProduct":false,
 "products":[]
 }
 ],
-"marginTop":0,
-"preview_data":true,
-"height":0.1
+"marginTop":10,
+"preview_data":false,
+"height":0.25
 },
 {
 "boxShadow":{
@@ -533,34 +560,7 @@
 "backgroundWidthMode":true,
 "hideEmptyProductListRating":false,
 "spaceWidth":12.608443859011626,
-"preview_data":true
-},
-{
-"parallax":false,
-"enableParallax":false,
-"enableBackground":false,
-"isHorizontal":false,
-"marginLeft":10,
-"layout":"bannerImage",
-"fit":"fitWidth",
-"marginRight":10,
-"parallaxImageRatio":1.2,
-"design":"static",
-"marginBottom":0,
-"items":[
-{
-"padding":5,
-"image":"https://i.imgur.com/flX2F8O.png",
-"bannerWithProduct":false,
-"showSubcategory":false,
-"video":"",
-"defaultShowProduct":false,
-"products":[]
-}
-],
-"marginTop":10,
-"preview_data":true,
-"height":0.25
+"preview_data":false
 },
 {
 "parallax":false,
@@ -627,7 +627,7 @@
 }
 ],
 "marginTop":0,
-"preview_data":true
+"preview_data":false
 },
 {
 "parallax":false,
@@ -685,7 +685,7 @@
 }
 ],
 "marginTop":0,
-"preview_data":true
+"preview_data":false
 },
 {
 "boxShadow":null,
@@ -713,7 +713,7 @@
 }
 ],
 "marginTop":0,
-"preview_data":true,
+"preview_data":false,
 "height":0.05
 },
 {
@@ -742,7 +742,7 @@
 }
 ],
 "marginTop":0,
-"preview_data":true,
+"preview_data":false,
 "height":0.15
 },
 {
@@ -771,7 +771,7 @@
 }
 ],
 "marginTop":0,
-"preview_data":true,
+"preview_data":false,
 "height":0.15
 },
 {
@@ -799,14 +799,14 @@
 }
 ],
 "marginTop":0,
-"preview_data":true,
+"preview_data":false,
 "height":0.15
 },
 {
 "layout":"spacer",
 "backgroundColor":null,
 "useLightColor":false,
-"preview_data":true,
+"preview_data":false,
 "height":14.167357083678375
 },
 {
@@ -864,7 +864,7 @@
 "showCartButton":false,
 "category":"725",
 "hideEmptyProductListRating":false,
-"preview_data":true
+"preview_data":false
 },
 {
 "parallax":false,
@@ -892,7 +892,7 @@
 }
 ],
 "marginTop":0,
-"preview_data":true,
+"preview_data":false,
 "height":0.5
 },
 {
@@ -920,7 +920,7 @@
 }
 ],
 "marginTop":0,
-"preview_data":true,
+"preview_data":false,
 "height":0.15
 },
 {
@@ -974,7 +974,7 @@
 "cartIconRadius":20,
 "enableAutoSliding":false,
 "hideEmptyProductListRating":false,
-"preview_data":true
+"preview_data":false
 },
 {
 "parallax":false,
@@ -1001,7 +1001,7 @@
 }
 ],
 "marginTop":0,
-"preview_data":true,
+"preview_data":false,
 "height":0.05
 },
 {
@@ -1029,7 +1029,7 @@
 }
 ],
 "marginTop":0,
-"preview_data":true,
+"preview_data":false,
 "height":0.15
 },
 {
@@ -1104,7 +1104,7 @@
 }
 ],
 "marginTop":5,
-"preview_data":true
+"preview_data":false
 },
 {
 "boxShadow":null,
@@ -1143,7 +1143,7 @@
 }
 ],
 "marginTop":0,
-"preview_data":true
+"preview_data":false
 },
 {
 "boxShadow":null,
@@ -1170,7 +1170,7 @@
 }
 ],
 "marginTop":0,
-"preview_data":true,
+"preview_data":false,
 "height":0.05
 },
 {
@@ -1220,7 +1220,7 @@
 }
 ],
 "marginTop":10,
-"preview_data":true
+"preview_data":false
 },
 {
 "parallax":false,
@@ -1247,7 +1247,7 @@
 }
 ],
 "marginTop":0,
-"preview_data":true,
+"preview_data":false,
 "height":0.15
 },
 {
@@ -1276,7 +1276,7 @@
 }
 ],
 "marginTop":0,
-"preview_data":true,
+"preview_data":false,
 "height":0.3
 },
 {
@@ -1346,7 +1346,7 @@
 "backgroundWidthMode":true,
 "hideEmptyProductListRating":false,
 "spaceWidth":14,
-"preview_data":true
+"preview_data":false
 },
 {
 "boxShadow":null,
@@ -1374,7 +1374,7 @@
 }
 ],
 "marginTop":0,
-"preview_data":true,
+"preview_data":false,
 "height":0.15
 },
 {
@@ -1438,7 +1438,7 @@
 "backgroundWidthMode":true,
 "hideEmptyProductListRating":false,
 "spaceWidth":12.608443859011626,
-"preview_data":true
+"preview_data":false
 },
 {
 "boxShadow":{
@@ -1501,7 +1501,7 @@
 "backgroundWidthMode":true,
 "hideEmptyProductListRating":false,
 "spaceWidth":12.608443859011626,
-"preview_data":true
+"preview_data":false
 }
 ],
 "Setting":{
@@ -1555,6 +1555,7 @@
 "colorActiveIcon":"ffc51d93",
 "colorCart":"fffe2060",
 "radiusBottomLeft":0,
+"alwaysShowTabBar":false,
 "marginLeft":0,
 "colorIcon":"ff7a7b7f",
 "marginBottom":0,
@@ -1688,7 +1689,7 @@
 "showOriginalColor":false,
 "defaultTab":false,
 "icon":"assets/icons/tabs/icon-home.png",
-"key":"LWIzHuSFmq"
+"key":"ohCkhnccdn"
 },
 {
 "layout":"category",
@@ -1701,7 +1702,7 @@
 "showSearch":true,
 "icon":"assets/icons/tabs/icon-category.png",
 "categoryLayout":"multi-level",
-"key":"YqScQtLdIE"
+"key":"IeaRjUeulo"
 },
 {
 "layout":"wishlist",
@@ -1711,7 +1712,7 @@
 "showOriginalColor":false,
 "defaultTab":false,
 "icon":"heart",
-"key":"QHVatahacW"
+"key":"lGuWCfqbFn"
 },
 {
 "layout":"cart",
@@ -1720,7 +1721,7 @@
 "showOriginalColor":false,
 "defaultTab":false,
 "icon":"assets/icons/tabs/icon-cart2.png",
-"key":"WgfddlJboB"
+"key":"qOlUvWSnqS"
 },
 {
 "layout":"profile",
@@ -1776,7 +1777,7 @@
 "title":"",
 "iconFontFamily":"CupertinoIcons"}
 },
-"key":"ywXfMuRdHI"
+"key":"ovQuVyeeIo"
 }
 ],
 "Drawer":{
@@ -2158,4 +2159,4 @@
 "cartIconRadius":12,
 "shuffle":false,
 "category":"722",
-"key":"UuMSrdnHVm"}}
+"key":"GAYIyfmPmQ"}}
