--- a/config_en.json
+++ b/config_en.json
@@ -505,11 +505,11 @@
 },
 {
 "boxShadow":{
-"spreadRadius":10,
+"blurRadius":10.0,
 "colorOpacity":0.1,
-"blurRadius":10,
-"x":0,
-"y":10
+"spreadRadius":10.0,
+"x":0.0,
+"y":10.0
 },
 "featured":false,
 "backgroundBoxFit":"fill",
@@ -524,18 +524,18 @@
 "image":"",
 "showCategory":false,
 "showCartIconColor":true,
-"hPadding":9,
+"hPadding":9.0,
 "hidePrice":false,
 "enableBottomAddToCart":false,
 "enableRating":true,
 "imageRatio":0.7625027813488929,
 "useCircularRadius":true,
-"borderRadius":13,
+"borderRadius":13.0,
 "backgroundHeight":333,
 "cardDesign":"card",
 "isSnapping":true,
 "name":"",
-"cartIconRadius":20,
+"cartIconRadius":20.0,
 "enableAutoSliding":true,
 "showCartIcon":true,
 "imageBoxfit":"cover",
@@ -543,18 +543,18 @@
 "parallax":false,
 "columns":0,
 "backgroundImage":"https://i.imgur.com/NgccEMY.jpeg",
-"vPadding":12,
-"hMargin":7,
+"vPadding":12.0,
+"hMargin":7.0,
 "parallaxImageRatio":1.2000000000000002,
-"vMargin":22,
+"vMargin":22.0,
 "onSale":false,
 "productType":false,
-"productListItemHeight":110,
+"productListItemHeight":110.0,
 "useSort":false,
 "rows":1,
 "layout":"twoColumn",
 "hideTitle":false,
-"backgroundRadius":0,
+"backgroundRadius":0.0,
 "showCartButton":false,
 "category":"722",
 "backgroundWidthMode":true,
@@ -1689,7 +1689,7 @@
 "showOriginalColor":false,
 "defaultTab":false,
 "icon":"assets/icons/tabs/icon-home.png",
-"key":"ohCkhnccdn"
+"key":"FcjogbYikV"
 },
 {
 "layout":"category",
@@ -1702,7 +1702,7 @@
 "showSearch":true,
 "icon":"assets/icons/tabs/icon-category.png",
 "categoryLayout":"multi-level",
-"key":"IeaRjUeulo"
+"key":"ajSqjBUGSL"
 },
 {
 "layout":"wishlist",
@@ -1712,7 +1712,7 @@
 "showOriginalColor":false,
 "defaultTab":false,
 "icon":"heart",
-"key":"lGuWCfqbFn"
+"key":"voTnsPhhrn"
 },
 {
 "layout":"cart",
@@ -1721,7 +1721,7 @@
 "showOriginalColor":false,
 "defaultTab":false,
 "icon":"assets/icons/tabs/icon-cart2.png",
-"key":"qOlUvWSnqS"
+"key":"qpOuWXTwtq"
 },
 {
 "layout":"profile",
@@ -1777,7 +1777,7 @@
 "title":"",
 "iconFontFamily":"CupertinoIcons"}
 },
-"key":"ovQuVyeeIo"
+"key":"AtElPKDyLk"
 }
 ],
 "Drawer":{
@@ -2158,5 +2158,4 @@
 "name":"🌟 Sir Just For You - ✨✨✨",
 "cartIconRadius":12,
 "shuffle":false,
-"category":"722",
-"key":"GAYIyfmPmQ"}}
+"category":"722"}}
