--- a/config_en.json
+++ b/config_en.json
@@ -2,33 +2,6 @@
 "HorizonLayout":[
 {
 "parallax":false,
-"enableParallax":false,
-"enableBackground":false,
-"isHorizontal":false,
-"marginLeft":10,
-"layout":"bannerImage",
-"fit":"fitWidth",
-"marginRight":10,
-"parallaxImageRatio":1.2,
-"design":"static",
-"marginBottom":0,
-"items":[
-{
-"padding":5,
-"image":"https://i.imgur.com/flX2F8O.png",
-"bannerWithProduct":false,
-"showSubcategory":false,
-"video":"",
-"defaultShowProduct":false,
-"products":[]
-}
-],
-"marginTop":10,
-"preview_data":false,
-"height":0.25
-},
-{
-"parallax":false,
 "doubleTapToFullScreen":false,
 "enableBackground":false,
 "isHorizontal":false,
@@ -305,6 +278,33 @@
 "enableParallax":false,
 "enableBackground":false,
 "isHorizontal":false,
+"marginLeft":10,
+"layout":"bannerImage",
+"fit":"fitWidth",
+"marginRight":10,
+"parallaxImageRatio":1.2,
+"design":"static",
+"marginBottom":0,
+"items":[
+{
+"padding":5,
+"image":"https://i.imgur.com/flX2F8O.png",
+"bannerWithProduct":false,
+"showSubcategory":false,
+"video":"",
+"defaultShowProduct":false,
+"products":[]
+}
+],
+"marginTop":10,
+"preview_data":false,
+"height":0.25
+},
+{
+"parallax":false,
+"enableParallax":false,
+"enableBackground":false,
+"isHorizontal":false,
 "marginLeft":0,
 "layout":"bannerImage",
 "fit":"fitWidth",
@@ -505,11 +505,11 @@
 },
 {
 "boxShadow":{
-"blurRadius":10.0,
+"spreadRadius":10,
 "colorOpacity":0.1,
-"spreadRadius":10.0,
-"x":0.0,
-"y":10.0
+"blurRadius":10,
+"x":0,
+"y":10
 },
 "featured":false,
 "backgroundBoxFit":"fill",
@@ -524,18 +524,18 @@
 "image":"",
 "showCategory":false,
 "showCartIconColor":true,
-"hPadding":9.0,
+"hPadding":9,
 "hidePrice":false,
 "enableBottomAddToCart":false,
 "enableRating":true,
 "imageRatio":0.7625027813488929,
 "useCircularRadius":true,
-"borderRadius":13.0,
+"borderRadius":13,
 "backgroundHeight":333,
 "cardDesign":"card",
 "isSnapping":true,
 "name":"",
-"cartIconRadius":20.0,
+"cartIconRadius":20,
 "enableAutoSliding":true,
 "showCartIcon":true,
 "imageBoxfit":"cover",
@@ -543,18 +543,18 @@
 "parallax":false,
 "columns":0,
 "backgroundImage":"https://i.imgur.com/NgccEMY.jpeg",
-"vPadding":12.0,
-"hMargin":7.0,
+"vPadding":12,
+"hMargin":7,
 "parallaxImageRatio":1.2000000000000002,
-"vMargin":22.0,
+"vMargin":22,
 "onSale":false,
 "productType":false,
-"productListItemHeight":110.0,
+"productListItemHeight":110,
 "useSort":false,
 "rows":1,
 "layout":"twoColumn",
 "hideTitle":false,
-"backgroundRadius":0.0,
+"backgroundRadius":0,
 "showCartButton":false,
 "category":"722",
 "backgroundWidthMode":true,
@@ -1688,8 +1688,7 @@
 "pos":100,
 "showOriginalColor":false,
 "defaultTab":false,
-"icon":"assets/icons/tabs/icon-home.png",
-"key":"FcjogbYikV"
+"icon":"assets/icons/tabs/icon-home.png"
 },
 {
 "layout":"category",
@@ -1701,8 +1700,7 @@
 "defaultTab":false,
 "showSearch":true,
 "icon":"assets/icons/tabs/icon-category.png",
-"categoryLayout":"multi-level",
-"key":"ajSqjBUGSL"
+"categoryLayout":"multi-level"
 },
 {
 "layout":"wishlist",
@@ -1711,8 +1709,7 @@
 "pos":300,
 "showOriginalColor":false,
 "defaultTab":false,
-"icon":"heart",
-"key":"voTnsPhhrn"
+"icon":"heart"
 },
 {
 "layout":"cart",
@@ -1720,8 +1717,7 @@
 "pos":400,
 "showOriginalColor":false,
 "defaultTab":false,
-"icon":"assets/icons/tabs/icon-cart2.png",
-"key":"qpOuWXTwtq"
+"icon":"assets/icons/tabs/icon-cart2.png"
 },
 {
 "layout":"profile",
@@ -1775,172 +1771,9 @@
 "banner":"https://i.imgur.com/YSTT9Ii.png",
 "bannerHeight":110,
 "title":"",
-"iconFontFamily":"CupertinoIcons"}
-},
-"key":"AtElPKDyLk"
+"iconFontFamily":"CupertinoIcons"}}
 }
 ],
-"Drawer":{
-"filter":0.65,
-"backgroundColor":"ffffffff",
-"logoConfig":{
-"marginRight":13,
-"useMaxWidth":true,
-"width":93,
-"boxFit":"fill",
-"marginBottom":10,
-"marginTop":45,
-"height":72,
-"marginLeft":5
-},
-"enable":true,
-"logo":"https://i.imgur.com/ynxXQOn.png",
-"subDrawerItem":{
-"web-bdYaGNJrTI":{
-"enableClose":false,
-"webViewMode":false,
-"webUrl":"https://xpertmania.com/terms-conditions/",
-"icon":"doc_plaintext",
-"enableBackward":true,
-"title":"Terms & Conditions",
-"requiredLogin":false,
-"iconFontFamily":"CupertinoIcons",
-"script":"",
-"enableForward":false
-},
-"screen-HnOuNZIqYB":{
-"useTabScreen":false,
-"icon":"square_arrow_down",
-"screen":"orders",
-"title":"My Orders",
-"iconFontFamily":"CupertinoIcons"
-},
-"product-ZhFIEsqdww":{
-"product":"8105",
-"icon":"tag_solid",
-"title":"Best Bot Ever",
-"iconFontFamily":"CupertinoIcons"
-},
-"web-siYQLlthaw":{
-"enableClose":false,
-"webViewMode":false,
-"webUrl":"https://xpertmania.com/about-us/",
-"icon":"check_mark_circled_solid",
-"enableBackward":true,
-"title":"About Us",
-"requiredLogin":false,
-"iconFontFamily":"CupertinoIcons",
-"script":"",
-"enableForward":false
-},
-"screen-iheCsSCzSO":{
-"useTabScreen":true,
-"icon":"profile_circled",
-"screen":"profile",
-"title":"My Account",
-"iconFontFamily":"CupertinoIcons"
-},
-"web-gToGUPIroV":{
-"enableClose":true,
-"webViewMode":false,
-"webUrl":"https://www.xpertmania.com/privacy-policy",
-"icon":"lock_shield",
-"enableBackward":false,
-"title":"Privacy Policy",
-"requiredLogin":false,
-"iconFontFamily":"CupertinoIcons",
-"script":"",
-"enableForward":false
-},
-"category-oNTwCmRzma":{
-"icon":"bolt_fill",
-"category":"540",
-"title":"SMM Panel",
-"iconFontFamily":"CupertinoIcons"
-},
-"banner-jceWeSoijp":{
-"product":"8099",
-"webViewMode":false,
-"icon":"news",
-"banner":"https://i.imgur.com/9plMYro.png",
-"bannerHeight":251,
-"title":"",
-"iconFontFamily":"CupertinoIcons"}
-},
-"safeArea":true,
-"items":[
-{
-"show":true,
-"type":"screen-iheCsSCzSO"
-},
-{
-"show":true,
-"type":"screen-HnOuNZIqYB"
-},
-{
-"show":true,
-"type":"login"
-},
-{
-"show":true,
-"type":"product-ZhFIEsqdww"
-},
-{
-"show":true,
-"type":"category-oNTwCmRzma"
-},
-{
-"show":false,
-"type":"home"
-},
-{
-"show":true,
-"type":"blog"
-},
-{
-"show":true,
-"type":"categories"
-},
-{
-"show":true,
-"type":"cart"
-},
-{
-"show":true,
-"type":"profile"
-},
-{
-"show":false,
-"type":"category"
-},
-{
-"show":true,
-"type":"web-gToGUPIroV"
-},
-{
-"show":true,
-"type":"web-bdYaGNJrTI"
-},
-{
-"show":true,
-"type":"web-siYQLlthaw"
-},
-{
-"show":false,
-"type":"banner-jceWeSoijp"
-}
-],
-"key":"APcaZRWbic",
-"zoomConfig":{
-"borderRadius":18.5,
-"backgroundImage":null,
-"angle":0,
-"style":"overlay",
-"slideMargin":0,
-"mainScreenScale":0.1,
-"enableShadow":false,
-"slideWidth":0.6}
-},
 "AppBar":{
 "elevation":0,
 "pinned":true,
@@ -2158,4 +1991,165 @@
 "name":"🌟 Sir Just For You - ✨✨✨",
 "cartIconRadius":12,
 "shuffle":false,
-"category":"722"}}
+"category":"722"
+},
+"Drawer":{
+"filter":0.65,
+"backgroundColor":"ffffffff",
+"logoConfig":{
+"marginRight":13,
+"useMaxWidth":true,
+"width":93,
+"boxFit":"fill",
+"marginBottom":10,
+"marginTop":45,
+"height":72,
+"marginLeft":5
+},
+"enable":true,
+"logo":"https://i.imgur.com/ynxXQOn.png",
+"subDrawerItem":{
+"web-bdYaGNJrTI":{
+"enableClose":false,
+"webViewMode":false,
+"webUrl":"https://xpertmania.com/terms-conditions/",
+"icon":"doc_plaintext",
+"enableBackward":true,
+"title":"Terms & Conditions",
+"requiredLogin":false,
+"iconFontFamily":"CupertinoIcons",
+"script":"",
+"enableForward":false
+},
+"screen-HnOuNZIqYB":{
+"useTabScreen":false,
+"icon":"square_arrow_down",
+"screen":"orders",
+"title":"My Orders",
+"iconFontFamily":"CupertinoIcons"
+},
+"product-ZhFIEsqdww":{
+"product":"8105",
+"icon":"tag_solid",
+"title":"Best Bot Ever",
+"iconFontFamily":"CupertinoIcons"
+},
+"web-siYQLlthaw":{
+"enableClose":false,
+"webViewMode":false,
+"webUrl":"https://xpertmania.com/about-us/",
+"icon":"check_mark_circled_solid",
+"enableBackward":true,
+"title":"About Us",
+"requiredLogin":false,
+"iconFontFamily":"CupertinoIcons",
+"script":"",
+"enableForward":false
+},
+"screen-iheCsSCzSO":{
+"useTabScreen":true,
+"icon":"profile_circled",
+"screen":"profile",
+"title":"My Account",
+"iconFontFamily":"CupertinoIcons"
+},
+"web-gToGUPIroV":{
+"enableClose":true,
+"webViewMode":false,
+"webUrl":"https://www.xpertmania.com/privacy-policy",
+"icon":"lock_shield",
+"enableBackward":false,
+"title":"Privacy Policy",
+"requiredLogin":false,
+"iconFontFamily":"CupertinoIcons",
+"script":"",
+"enableForward":false
+},
+"category-oNTwCmRzma":{
+"icon":"bolt_fill",
+"category":"540",
+"title":"SMM Panel",
+"iconFontFamily":"CupertinoIcons"
+},
+"banner-jceWeSoijp":{
+"product":"8099",
+"webViewMode":false,
+"icon":"news",
+"banner":"https://i.imgur.com/9plMYro.png",
+"bannerHeight":251,
+"title":"",
+"iconFontFamily":"CupertinoIcons"}
+},
+"safeArea":true,
+"items":[
+{
+"show":true,
+"type":"screen-iheCsSCzSO"
+},
+{
+"show":true,
+"type":"screen-HnOuNZIqYB"
+},
+{
+"show":true,
+"type":"login"
+},
+{
+"show":true,
+"type":"product-ZhFIEsqdww"
+},
+{
+"show":true,
+"type":"category-oNTwCmRzma"
+},
+{
+"show":false,
+"type":"home"
+},
+{
+"show":true,
+"type":"blog"
+},
+{
+"show":true,
+"type":"categories"
+},
+{
+"show":true,
+"type":"cart"
+},
+{
+"show":true,
+"type":"profile"
+},
+{
+"show":false,
+"type":"category"
+},
+{
+"show":true,
+"type":"web-gToGUPIroV"
+},
+{
+"show":true,
+"type":"web-bdYaGNJrTI"
+},
+{
+"show":true,
+"type":"web-siYQLlthaw"
+},
+{
+"show":false,
+"type":"banner-jceWeSoijp"
+}
+],
+"key":"APcaZRWbic",
+"zoomConfig":{
+"borderRadius":18.5,
+"backgroundImage":null,
+"angle":0,
+"style":"overlay",
+"slideMargin":0,
+"mainScreenScale":0.1,
+"enableShadow":false,
+"slideWidth":0.6}}}
