--- a/config_en.json
+++ b/config_en.json
@@ -1692,24 +1692,24 @@
 },
 {
 "layout":"category",
-"parallaxImageRatio":1.2,
-"fullscreen":false,
-"pos":200,
-"showOriginalColor":false,
-"parallax":false,
-"defaultTab":false,
-"showSearch":true,
 "icon":"assets/icons/tabs/icon-category.png",
-"categoryLayout":"multi-level"
+"pos":200,
+"defaultTab":false,
+"fullscreen":false,
+"showOriginalColor":false,
+"categoryLayout":"sideMenuWithGroup",
+"parallax":false,
+"parallaxImageRatio":1.2,
+"showSearch":true
 },
 {
-"layout":"wishlist",
+"layout":"videos",
+"icon":"heart",
 "fontFamily":"CupertinoIcons",
-"fullscreen":false,
 "pos":300,
-"showOriginalColor":false,
 "defaultTab":false,
-"icon":"heart"
+"fullscreen":false,
+"showOriginalColor":false
 },
 {
 "layout":"cart",
